添加jwt令牌
