# tour/blog-service/internal/model/auth.go
@@ -1,0 +1,25 @@
+package model
+
+import "gorm.io/gorm"
+
+type Auth struct {
+	*Model
+	AppKey    string `json:"app_key"`
+	AppSecret string `json:"app_secret"`
+}
+
+func (a Auth) TableName() string {
+	return "blog_auth"
+}
+
+// 获取令牌
+func (a Auth) Get(db *gorm.DB) (Auth, error) {
+	var auth Auth
+	db = db.Where("app_key = ? AND app_secret = ? AND is_del = ?", a.AppKey, a.AppSecret, 0)
+	err := db.First(&auth).Error
+	if err != nil && err != gorm.ErrRecordNotFound {
+		return auth, err
+	}
+	return auth, nil
+}
+
